# simple-dmarc-parser

./: .gitignore  LICENSE  README.md  dmarc_report.sh  pyproject.toml  simple-dmarc-parser.conf.example
simple_dmarc_parser/: dmarc_parser.py
